--- a/index.html
+++ b/index.html
@@ -133,7 +133,7 @@
 </head>
 <body>
   <div class="container">
-    <img src="logo-placeholder.png" alt="Testmaniac Solutions Logo" class="logo" />
+    <img src="TMS_Logo.svg" alt="Testmaniac Solutions Logo" class="logo" />
 
     <h1>Testmaniac Solutions</h1>
     <p class="lead"><strong>Custom Software starting at ₹1999</strong><br />We build exactly what your business needs</p>
