--- a/index.html
+++ b/index.html
@@ -78,6 +78,14 @@
       margin: 0 auto 60px auto;
       text-align: left;
     }
+     svg.logo {
+      max-width: 180px;
+      height: auto;
+      margin-bottom: 20px;
+      display: block;
+      margin-left: auto;
+      margin-right: auto;
+    }
     ul.services li {
       background: #e7f1ff;
       margin-bottom: 12px;
