--- a/index.html
+++ b/index.html
@@ -148,7 +148,7 @@
         .letters { fill: #666666; font-weight: 700; font-size: 50px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
       </style>
       <text class="brace" x="10" y="60">{</text>
-      <text class="letters" x="50" y="60">TMSS</text>
+      <text class="letters" x="50" y="60">TMS</text>
       <text class="brace" x="140" y="70">}</text>
     </svg>
 
