--- a/index.html
+++ b/index.html
@@ -34,10 +34,6 @@
     .container:hover {
       box-shadow: 0 20px 40px rgba(0, 0, 0, 0.18);
     }
-    img.logo {
-      max-width: 180px;
-      margin-bottom: 25px;
-    }
 
     h1 {
       font-weight: 600;
@@ -79,7 +75,7 @@
       text-align: left;
     }
      svg.logo {
-      max-width: 180px;
+      max-width: 220px;
       height: auto;
       margin-bottom: 20px;
       display: block;
@@ -141,15 +137,15 @@
 </head>
 <body>
   <div class="container">
-    <!-- Inline SVG Logo -->
-    <svg class="logo" width="200" height="80" viewBox="0 0 200 80" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="TMS Logo">
+    <!-- Inline SVG Logo with more spacing -->
+    <svg class="logo" width="220" height="80" viewBox="0 0 220 80" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="TMS Logo">
       <style>
         .brace { fill: #4CAF50; font-weight: bold; font-size: 48px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
         .letters { fill: #666666; font-weight: 700; font-size: 50px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
       </style>
       <text class="brace" x="10" y="60">{</text>
       <text class="letters" x="50" y="60">TMS</text>
-      <text class="brace" x="140" y="70">}</text>
+      <text class="brace" x="180" y="60">}</text>
     </svg>
 
     <h1>Testmaniac Solutions</h1>
