--- a/index.html
+++ b/index.html
@@ -74,14 +74,11 @@
       margin: 0 auto 60px auto;
       text-align: left;
     }
-     svg.logo {
-      max-width: 220px;
-      height: auto;
-      margin-bottom: 20px;
-      display: block;
-      margin-left: auto;
-      margin-right: auto;
-    }
+     .logo {
+  max-width: 180px;
+  margin-bottom: 20px;
+}
+
     ul.services li {
       background: #e7f1ff;
       margin-bottom: 12px;
@@ -138,15 +135,8 @@
 <body>
   <div class="container">
     <!-- Inline SVG Logo with more spacing -->
-    <svg class="logo" width="220" height="80" viewBox="0 0 220 80" xmlns="http://www.w3.org/2000/svg" role="img" aria-label="TMS Logo">
-      <style>
-        .brace { fill: #4CAF50; font-weight: bold; font-size: 48px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-        .letters { fill: #666666; font-weight: 700; font-size: 50px; font-family: 'Segoe UI', Tahoma, Geneva, Verdana, sans-serif; }
-      </style>
-      <text class="brace" x="10" y="60">{</text>
-      <text class="letters" x="50" y="60">TMS</text>
-      <text class="brace" x="180" y="60">}</text>
-    </svg>
+    <img src="TMS_Logo.svg" alt="Testmaniac Solutions Logo" class="logo" />
+
 
     <h1>Testmaniac Solutions</h1>
     <p class="lead"><strong>Custom Software starting at ₹1999</strong><br />We build exactly what your business needs</p>
