--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
 <body>
   <div class="container">
     <!-- Inline SVG Logo with more spacing -->
-    <img src="TMS_Logo.svg" alt="Testmaniac Solutions Logo" class="logo" />
+    <img src="TMS_Logo.png" alt="Testmaniac Solutions Logo" class="logo" />
 
 
     <h1>Testmaniac Solutions</h1>
