--- a/index.html
+++ b/index.html
@@ -11,7 +11,15 @@
 
   gtag('config', 'AW-17108270947');
 </script>
-  
+  <!-- Event snippet for Page view conversion page -->
+<script>
+  gtag('event', 'conversion', {
+      'send_to': 'AW-17108270947/9_LeCJCarcwaEOP-7d0_',
+      'value': 1.0,
+      'currency': 'INR'
+  });
+</script>
+
   <meta charset="UTF-8" />
   <meta name="viewport" content="width=device-width, initial-scale=1" />
   <title>Testmaniac Solutions</title>
